ppx_view/test/errors/invalid_float_lit.ml
let f x =
  match%view x with
  | 1.0z -> ()
